results/SVCOMP/conversational/log-bitwise1-2024_03_08_20_15_49.txt
public class bitwise1 {
    static char c;

    //@ requires Integer.MIN_VALUE <= input && input <= Integer.MAX_VALUE;
    //@ ensures \result == ((c | 2) & 3) == 3;
    public static boolean fun(int input) {
        c = (char) (input * 2 + 1);
        int i = (c | 2);
        return (i & 3) == 3;
    }
}
/home/max/Documents/JMLGPT/tmp/bitwise1.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result == ((c | 2) & 3) == 3;
                             ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:5: error: incomparable types: boolean and int
    //@ ensures \result == ((c | 2) & 3) == 3;
                        ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:5: error: incomparable types: boolean and int
    //@ ensures \result == ((c | 2) & 3) == 3;
                                         ^
3 errors

public class bitwise1 {
    spec_public static char c;

    //@ requires Integer.MIN_VALUE <= input && input <= Integer.MAX_VALUE;
    //@ ensures \result == (((int)c | 2) & 3) == 3;
    public static boolean fun(int input) {
        c = (char) (input * 2 + 1);
        int i = ((int)c | 2);
        return (i & 3) == 3;
    }
}
/home/max/Documents/JMLGPT/tmp/bitwise1.java:2: error: <identifier> expected
    spec_public static char c;
               ^
1 error

public class bitwise1 {
    //@ spec_public
    static char c;

    //@ requires Integer.MIN_VALUE <= input && input <= Integer.MAX_VALUE;
    //@ ensures \result == (((int)c | 2) & 3) == 3;
    public static boolean fun(int input) {
        c = (char) (input * 2 + 1);
        int i = ((int)c | 2);
        return (i & 3) == 3;
    }
}
/home/max/Documents/JMLGPT/tmp/bitwise1.java:6: error: incomparable types: boolean and int
    //@ ensures \result == (((int)c | 2) & 3) == 3;
                        ^
/home/max/Documents/JMLGPT/tmp/bitwise1.java:6: error: incomparable types: boolean and int
    //@ ensures \result == (((int)c | 2) & 3) == 3;
                                              ^
2 errors

public class bitwise1 {
    //@ spec_public
    static char c;

    //@ requires Integer.MIN_VALUE <= input && input <= Integer.MAX_VALUE;
    //@ ensures \result ==> (((int)c | 2) & 3) == 3;
    public static boolean fun(int input) {
        c = (char) (input * 2 + 1);
        int i = ((int)c | 2);
        return (i & 3) == 3;
    }
}

